Adjusted the CSS to fix the spacing issue and ensure the second and third answer buttons have the same height.

--- a/css/style.css
+++ b/css/style.css
@@ -253,17 +253,19 @@ img {
 
 .sec3 .question_four_answers .box {
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .sec3 .question_four_answers .box a {
   width: calc(50% - 5px);
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
 }
 .sec3 .question_four_answers .box a:nth-child(3),
 .sec3 .question_four_answers .box a:nth-child(4) {
   margin-bottom: 0;
-}
-.sec3 .question_four_answers .box a:last-child {
-  margin-left: auto;
 }
 
 .sec3 .question2 .box {
